Do not check for flow, remove not supported versions, update tests