@@ -15,7 +15,6 @@ import java.text.Collator;
 import java.util.List;
 import java.util.Objects;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -57,10 +56,9 @@ class GitHubService {
             if (this == obj) {
                 return true;
             }
-            if (!(obj instanceof GitHubRelease)) {
+            if (!(obj instanceof GitHubRelease other)) {
                 return false;
             }
-            GitHubRelease other = (GitHubRelease) obj;
             return Objects.equals(tagName, other.tagName);
         }
 
@@ -79,13 +77,7 @@ class GitHubService {
 
     static final String VAADIN_ANALYSIS_URI = "https://raw.githubusercontent.com/vaadin/vulnerability-analysis/main/analysis.json";
 
-    static final String FRAMEWORK_RELEASES_URI = "https://api.github.com/repos/vaadin/framework/releases";
-
     static final String FLOW_RELEASES_URI = "https://api.github.com/repos/vaadin/flow/releases";
-
-    static final Pattern FRAMEWORK_7_PATTERN = compile("^7\\.\\d+.\\d+$");
-
-    static final Pattern FRAMEWORK_8_PATTERN = compile("^8\\.\\d+.\\d+$");
 
     static final Pattern FLOW_24_PATTERN = compile("^24\\.\\d+.\\d+$");
 
@@ -95,23 +87,15 @@ class GitHubService {
 
     private VulnerabilityAnalysis analysisCache;
 
-    List<String> getFramework7Versions() {
-        return getVersions(FRAMEWORK_7_PATTERN);
-    }
-
-    List<String> getFramework8Versions() {
-        return getVersions(FRAMEWORK_8_PATTERN);
-    }
-
     List<String> getFlow24Versions() {
         return getVersions(FLOW_24_PATTERN);
     }
 
-    private List<String> getVersions(Pattern frameworkVersionPattern) {
+    private List<String> getVersions(Pattern flowVersionPattern) {
         return getReleasesFromGitHub().stream().map(GitHubRelease::getTagName)
-                .filter(frameworkVersionPattern.asPredicate())
+                .filter(flowVersionPattern.asPredicate())
                 .limit(NUMBER_OF_LATEST_MAINTAINED_VERSIONS)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<GitHubRelease> getReleasesFromGitHub() {
@@ -122,16 +106,10 @@ class GitHubService {
     }
 
     void updateReleasesCache() {
-        boolean isFlow = AppSecService.getInstance().isFlow();
         ObjectReader listReader = MAPPER.readerForListOf(GitHubRelease.class);
         try {
-            URL frameworkTagsUrl;
-            if (isFlow) {
-                frameworkTagsUrl = getFlowReleasesUrl();
-            } else {
-                frameworkTagsUrl = getFrameworkReleasesUrl();
-            }
-            releasesCache = listReader.readValue(frameworkTagsUrl);
+            URL flowTagsUrl = getFlowReleasesUrl();
+            releasesCache = listReader.readValue(flowTagsUrl);
             LOGGER.debug("Vaadin releases cache updated from GitHub "
                     + releasesCache);
         } catch (IOException e) {
@@ -165,15 +143,6 @@ class GitHubService {
             return new URL(FLOW_RELEASES_URI);
         } catch (MalformedURLException e) {
             throw new AppSecException("Invalid Vaadin Flow releases URL", e);
-        }
-    }
-
-    protected URL getFrameworkReleasesUrl() {
-        try {
-            return new URL(FRAMEWORK_RELEASES_URI);
-        } catch (MalformedURLException e) {
-            throw new AppSecException("Invalid Vaadin framework releases URL",
-                    e);
         }
     }
 
